fixed the scrollbar of the chatroom

--- a/frontend/src/pages/ChatRoom/style.css
+++ b/frontend/src/pages/ChatRoom/style.css
@@ -1,7 +1,7 @@
 main {
   display: flex;
   justify-content: space-between;
-  height: 700px;
+  height: calc(100vh - 80px);
 }
 
 .chat-room main .side-bar {
